--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,10 @@
     <title>Python Graphing Calculator</title>
 </head>
 <body>
-    
+    <center>
+    <input type="text">
+    <button class="action_Button" id="run_calc">Run</button>
+    <img src="{{plot_filename}}" alt="Python snake with an Arduino.">
+    </center>
 </body>
 </html>
