--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,17 @@
     <title>Python Graphing Calculator</title>
 </head>
 <body>
+    <div class="container">
+    <!-- <h2>Button Pressed: {{ButtonPressed}}</h2>
+    <form method="post">
+        <input type="submit" value="Click Me">
+    </form> -->
+    
     <center>
     <input type="text">
     <button class="action_Button" id="run_calc">Run</button>
-    <img src="{{plot_filename}}" alt="Python snake with an Arduino.">
+    <img src="{{plot_filename}}" alt="User plot">
     </center>
+    </div>
 </body>
 </html>
