--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,15 @@
 </head>
 <body>
     <div class="container">
-    <!-- <h2>Button Pressed: {{ButtonPressed}}</h2>
-    <form method="post">
-        <input type="submit" value="Click Me">
-    </form> -->
-    
-    <center>
-    <input type="text">
-    <button class="action_Button" id="run_calc">Run</button>
+
+<center>
+    <form method="post" action="/calculator">
+        <input type="text" name="x_input">
+        <input type="text" name="y_input">
+        <button class="action_Button" id="run_calc">Run</button>
+    </form>
     <img src="{{plot_filename}}" alt="User plot">
-    </center>
+</center>
     </div>
 </body>
 </html>
