--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Graphing Calculator</title>
+    <title>Basic Matplotlib Plot</title>
 </head>
-<body>
+<body> <center>
+    <section><h2>Separate all elements with commas, no spaces. Example: 1,2,3,4</h2>
+        <h3>The total number of x value elements and y value elements must be equal.</h3></section>
+    </center>
     <div class="container">
-
 <center>
+    <div>X</div><div>Y</div>
     <form method="post" action="/calculator">
-        <input type="text" name="x_input">
-        <input type="text" name="y_input">
+        <input type="text" name="x_input" value="Enter X Elements!">
+        <input type="text" name="y_input" value="Enter Y Elements!">
         <button class="action_Button" id="run_calc">Run</button>
     </form>
     <img src="{{plot_filename}}" alt="User plot">
