--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
 <center>
     <div>X</div><div>Y</div>
     <form method="post" action="/calculator">
-        <input type="text" name="x_input" value="Enter X Elements!">
-        <input type="text" name="y_input" value="Enter Y Elements!">
+        <input type="text" name="x_input" placeholder="Enter X Elements!">
+        <input type="text" name="y_input" placeholder="Enter Y Elements!">
         <button class="action_Button" id="run_calc">Run</button>
     </form>
     <img src="{{plot_filename}}" alt="User plot">
