--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Matplotlib Plot</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css' ) }}">
 </head>
+<title>Basic Matplotlib Plot</title>
+
 <body> <center>
     <section><h2>Separate all elements with commas, no spaces. Example: 1,2,3,4</h2>
         <h3>The total number of x value elements and y value elements must be equal.</h3></section>
     </center>
     <div class="container">
 <center>
-    <div>X</div><div>Y</div>
+    <div><img align="bottom" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F4.bp.blogspot.com%2F-KHkBj1JcKwc%2FVIh8svSrPoI%2FAAAAAAAAatg%2FV-iVqwZkg8w%2Fs1600%2FAnimated%252BSnakes%252B(54).gif&f=1&nofb=1"></div>
     <form method="post" action="/calculator">
         <input type="text" name="x_input" placeholder="Enter X Elements!">
         <input type="text" name="y_input" placeholder="Enter Y Elements!">
